--- a/README.Rmd
+++ b/README.Rmd
@@ -23,36 +23,40 @@ The goal of shinyPostgreSQL is to ...
 
 ## Installation
 
-You can install the released version of shinyPostgreSQL from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of shinyPostgreSQL from [GitHub](https://github.com/) with:
 
 ``` r
-install.packages("shinyPostgreSQL")
+# install.packages("devtools")
+devtools::install_github("thewileylab/shinyPostgreSQL")
 ```
 
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+To run a demo application:
 
-```{r example, eval=FALSE}
+```{r demo, eval=F}
+shinyPostgreSQL::run_app()
+```
+
+## Usage
+
+To integrate shinyPostgreSQL with your Shiny application place `postgresql_setup_ui()` and `postgresql_setup_server()` functions into your applications ui and server functions respectively.
+
+```{r example, eval=F}
+library(shiny)
 library(shinyPostgreSQL)
-## basic example code
+ui <- fluidPage(
+  tags$h2('Connect to BigQuery UI'),
+  postgresql_setup_ui(id = 'setup-namespace')
+  )
+
+server <- function(input, output, session) {
+  postgresql_setup_vars <- postgresql_setup_server(id = 'setup-namespace')
+}
+
+if (interactive())
+  shinyApp(ui = ui, server = server, options = list(port = 8100, launch.browser = T))
 ```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub!
 
 ## Code of Conduct
 
