--- a/README.Rmd
+++ b/README.Rmd
@@ -55,7 +55,7 @@ server <- function(input, output, session) {
 }
 
 if (interactive())
-  shinyApp(ui = ui, server = server, options = list(port = 8100, launch.browser = T))
+  shinyApp(ui = ui, server = server)
 ```
 
 ## Code of Conduct
